[tool.poetry]
name = "beacon-client-py"
version = "0.2.0"
description = "A Python Client for interacting with the Ethereum Beacon Chain API"
authors = ["Benedict Brady"]
readme = "README.md"
packages = [{include = "beacon_client"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
sseclient-py = "^1.7.2"
bitstring = "^3.1.9"
dacite = "^1.6.0"
multiaddr = "^0.0.9"


[tool.poetry.group.dev.dependencies]
devtools = {extras = ["pygments"], version = "^0.9.0"}
black = "^22.8.0"
mkdocs = "^1.3.1"
mkdocs-material = "^8.5.1"
pymdown-extensions = "^9.5"
pytest = "^7.1.3"
mypy = "^0.971"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
